--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -21,7 +21,7 @@
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li th:if="${session.user != null}">
-                        <a href="/publish">发起</a>
+                        <a href="/publish">提问</a>
                     </li>
                     <li class="dropdown" th:if="${session.user != null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -30,7 +30,7 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/pfofile/questions">我的问题</a></li>
+                            <li><a href="/profile/questions">我的问题</a></li>
                             <li><a href="#">退出登录</a></li>
                         </ul>
                     </li>
