--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,14 +18,20 @@
             <hr/>
             <div class="media" th:each="question : ${pagination.questions}">
                 <div class="media-left">
-                    <a href="#">
+                    <a th:href="@{'/question/'+${question.id}}">
                         <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.title}"></h4>
+                    <h4 class="media-heading">
+                        <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
+                    </h4>
                     <span th:text="${question.description}"></span>
-                    <span class="text-desc"><span th:text="${question.commentCount}"></span>个回复•<span th:text="${question.viewCount}"></span>次浏览•<span th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span></span>
+                    <span class="text-desc">
+                        <span th:text="${question.commentCount}"></span>个回复•
+                        <span th:text="${question.viewCount}"></span>次浏览•
+                        <span th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>
+                    </span>
                 </div>
             </div>
             <nav aria-label="Page navigation">
@@ -40,7 +46,8 @@
                             <span aria-hidden="true">&lsaquo;</span>
                         </a>
                     </li>
-                    <li th:each="page : ${pagination.pages}" th:class="${pagination.currentPage == page} ? 'active' : ''">
+                    <li th:each="page : ${pagination.pages}"
+                        th:class="${pagination.currentPage == page} ? 'active' : ''">
                         <a th:href="@{/(page=${page})}" th:text="${page}"></a>
                     </li>
                     <li th:if="${pagination.showNext}">
