--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,15 @@
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script type="application/javascript" src="/js/bootstrap.min.js"></script>
 </head>
+<script type="application/javascript">
+    window.onload = function() {
+        var closable = window.localStorage.getItem("closable");
+        if (closable == "true") {
+            window.localStorage.removeItem("closable");
+            window.close();
+        }
+    }
+</script>
 <body>
 <div th:replace="~{navigation :: nav}"></div>
 <div class="container-fluid main">
