--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/community.css">
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/community.js"></script>
+    <script src="/js/moment.min.js"></script>
     <script type="application/javascript" src="/js/bootstrap.min.js"></script>
 </head>
 <body>
@@ -22,14 +23,25 @@
                 发布时间: <span th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span> |
                 阅读数: <span th:text="${question.viewCount}"></span>
                 </span>
+                <!--内容-->
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
-                <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
-                   th:if="${session.user != null && session.user.id == question.creator}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    编辑
-                </a>
+                <!--标签-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <span class="label label-info question-tag" th:each="tag : ${question.tag.split(',')}">
+                        <span class="glyphicon glyphicon-tags"></span>
+                        <span class="label label-info" th:text="${tag}"></span>
+                    </span>
+                </div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
+                <!--编辑-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                       th:if="${session.user != null && session.user.id == question.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                    </a>
+                </div>
             </div>
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -37,6 +49,7 @@
                     <span th:text="${question.commentCount}"></span> 个回复
                 </h4>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp"/>
+                <!--一级评论-->
                 <div id="comments" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:each="comment : ${comments}">
                     <div class="media">
                         <div class="media-left">
@@ -44,16 +57,52 @@
                                 <img class="media-object img-rounded" th:src="${comment.user.avatarUrl}">
                             </a>
                         </div>
-                        <div class="media-body">
+                        <div class="media-body" th:id="${'comment-body-'+comment.id}">
                             <h5 class="media-heading">
                                 <span th:text="${comment.user.name}"></span>
                             </h5>
                             <div th:text="${comment.content}"></div>
                             <div class="menu">
                                 <span class="icon glyphicon glyphicon-thumbs-up"></span>
-                                <span class="icon glyphicon glyphicon-comment"></span>
+                                <span class="comment-icon" th:data-id="${comment.id}" onclick="collapseComments(this)">
+                                    <span class="glyphicon glyphicon-comment"></span>
+                                    <span th:text="${comment.commentCount}"></span>
+                                </span>
+
                                 <span class="pull-right"
                                       th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}"></span>
+                            </div>
+                            <!--二级评论-->
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comment"
+                                 th:id="${'comment-'+comment.id}">
+
+                                <!--<div id="comments" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:each="comment : ${comments}">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <a href="#">
+                                                <img class="media-object img-rounded" th:src="${comment.user.avatarUrl}">
+                                            </a>
+                                        </div>
+                                        <div class="media-body">
+                                            <h5 class="media-heading">
+                                                <span th:text="${comment.user.name}"></span>
+                                            </h5>
+                                            <div th:text="${comment.content}"></div>
+                                            <div class="menu">
+                                                <span class="icon glyphicon glyphicon-thumbs-up"></span>
+                                                <span class="pull-right"
+                                                      th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>-->
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <input type="text" class="form-control" placeholder="评论一下"
+                                           th:id="${'input-'+comment.id}"/>
+                                    <buttom type="buttom" class="btn btn-success pull-right" th:data-id="${comment.id}"
+                                            onclick="comments(this)">评论
+                                    </buttom>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -102,7 +151,17 @@
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>我的微信</h4>
+                <img class="thumbnail quesiton-wechat" src="/img/wechat.png"/>
+            </div>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>相关问题</h4>
+                <ul class="question-related">
+                    <li th:each="related : ${relatedQuestions}">
+                        <a th:href="@{'/question/' + ${related.id}}" th:text="${related.title}"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
